tests/snapshots/run_wpt_conformance__trtx_gemm_two_float32_2D_tensors_options_alpha___0_0.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "gemm.https.any.js",
    "gemm two float32 2D tensors options.alpha = 0.0",
    "trtx",
    "PASS",
)
